--- a/aplicatie-master/paginaprincipala.html
+++ b/aplicatie-master/paginaprincipala.html
@@ -45,7 +45,7 @@
         <!-- Hero Section -->
         <section class="hero bg-primary text-white text-center py-5">
             <div class="container">
-                <h1 class="display-4">AAAAA Gestionați-vă eficient bugetul financiar și tranzactiile valutare</h1>
+                <h1 class="display-4">Gestionați-vă eficient bugetul financiar și tranzactiile valutare</h1>
                 <p class="lead">Simplificați-vă viața financiară cu serviciile noastre complete de gestionare a bugetului și de schimb valutar.</p>
                 <a href="#" class="btn btn-light btn-lg">Incepe</a>
             </div>
