--- a/aplicatie-master/managementulbugetului.html
+++ b/aplicatie-master/managementulbugetului.html
@@ -99,7 +99,7 @@
     <div class="box">
         <h2>Ce este bugetul personal?</h2>
         <p>Bugetul personal este un plan financiar care estimează veniturile și cheltuielile pentru o anumită perioadă de timp. Acesta te ajută să îți gestionezi banii și să te asiguri că îți poți acoperi toate cheltuielile necesare, economisind în același timp pentru obiectivele tale financiare.</p>
-        <img src="img/planning.jpg" alt="Planificarea bugetului">
+        <img src="/aplicatie/aplicatie-master/img/planning.jpg" alt="Servicii financiare" style="display: block; margin: 0 auto;">
     </div>
 
     <div class="box">
